<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            android:checked="false"
            android:enabled="true"
            android:visible="true" />

        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_donut"
            android:title="@string/menu_menu"
            android:checked="false"
            android:enabled="true"
            android:visible="true" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart"
            android:checked="false"
            android:enabled="true"
            android:visible="true" />
    </group>

    <!-- Removed account submenu -->
</menu>